--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,8 @@
 VUE_APP_TITLE = MyNetCore-Vue
 # 接口请求地址，会设置到 axios 的 baseURL 参数上
 VUE_APP_API_ROOT = http://rep.litdev.me/api/open/
+#附件网址根目录
+VUE_APP_Attach_ROOT = http://rep.litdev.me
 # 是否开启 CDN 支持，开启设置 ON，关闭设置 OFF
 # 详情介绍请阅读 https://hooray.gitee.io/fantastic-admin/guide/cdn.html
 VUE_APP_CDN = OFF
