--- a/.env.development
+++ b/.env.development
@@ -1,9 +1,9 @@
 # 页面标题
 VUE_APP_TITLE = MyNetCore-Vue
 # 接口请求地址，会设置到 axios 的 baseURL 参数上
-VUE_APP_API_ROOT = http://rep.litdev.me/api/open/
+VUE_APP_API_ROOT = http://localhost:5120/api/open/
 #附件网址根目录
-VUE_APP_Attach_ROOT = http://rep.litdev.me
+VUE_APP_Attach_ROOT = http://localhost:5120
 # 是否开启 CDN 支持，开启设置 ON，关闭设置 OFF
 # 详情介绍请阅读 https://hooray.gitee.io/fantastic-admin/guide/cdn.html
 VUE_APP_CDN = OFF
@@ -11,3 +11,6 @@ VUE_APP_CDN = OFF
 VUE_APP_GZIP = OFF
 # 调试工具，可设置 eruda 或 vconsole，如果不需要开启则留空
 VUE_APP_DEBUG_TOOL =
+
+#Token Head Name
+VUE_APP_TOKEN_HEADER_NAME = MyToken
