--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ VUE_APP_CDN = OFF
 VUE_APP_GZIP = ON
 # 调试工具，可设置 eruda 或 vconsole，如果不需要开启则留空
 VUE_APP_DEBUG_TOOL =
+
+#Token Head Name
+VUE_APP_TOKEN_HEADER_NAME = MyToken
